EPMRDUZECG-317 - fixed some issue about sorting